src/objects/QPMS__Complaint_Activity__c.object
<CustomObject>
    <description>Captures activities or comments related to complaint.</description>
    <fields>
        <fullName>QPMS__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Complaint Activities</relationshipLabel>
        <relationshipName>Complaint_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Comment</fullName>
                </value>
                <value>
                    <fullName>Complaint Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint Activity</label>
    <nameField>
        <displayFormat>Complaint Activity-{0000}</displayFormat>
        <label>Complaint Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>